--- a/portfolio.html
+++ b/portfolio.html
@@ -323,7 +323,7 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="gallery__item aboba">
+                        <li class="gallery__item">
                             <a href="#" class="gallery__link link">
                                 <div class="gallery__wrap">
                             <picture>
@@ -334,8 +334,8 @@
                                 media="(min-width: 1200px)">
                                 <source 
                                 srcset="
-                                ./images/portfolio/portfolio9-tab-min.jpg 1x,
-                                ./images/portfolio/portfolio9-tab-2x-min.jpg 2x"
+                                ./images/portfolio/portfolio9-tab.jpg 1x,
+                                ./images/portfolio/portfolio9-tab-2x.jpg 2x"
                                 media="(min-width: 768px)">
                                 <source 
                                 srcset="
