--- a/portfolio.html
+++ b/portfolio.html
@@ -358,51 +358,52 @@
         </main>
         <footer class="footer">
             <div class="footer-wrap">
-            <div class="container footer-flex">
-                <div>
-                    <a href="" class="footer-logo link"><span class="logo-footer-start">Web</span><span class="logo-footer-end">Studio</span></a>
-                    <address>
-                        <ul class="footer-list list">
-                            <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
-                            <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
-                        </ul> 
-                    </address>
+            <div class="container">
+                <div class="footer-flex">
+                    <div>
+                        <a href="" class="footer-logo link"><span class="logo-footer-start">Web</span><span class="logo-footer-end">Studio</span></a>
+                        <address>
+                            <ul class="footer-list list">
+                                <li class="footer-item"><a href="https://goo.gl/maps/usRxasDixCcgagAA9" target="_blank" class="footer-position link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                                <li class="footer-item"><a href="mailto:info@example.com" class="footer-link link">info@example.com</a></li>
+                                <li class="footer-item"><a href="tel:+38-096-111-11-11" class="footer-link link">+38 096 111 11 11</a></li>
+                            </ul> 
+                        </address>
+                    </div>
+                    <div class="join">
+                        <h2 class="join-title">присоединяйтесь</h2>
+                        <ul class="join-list list">
+                            <li class="join-item">
+                                <a href="" class="join-link link">
+                                    <svg class="join-icon" width="20" height="20">
+                                        <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="join-item" >
+                                <a href="" class="join-link link">
+                                    <svg class="join-icon" width="20" height="20">
+                                        <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="join-item">
+                                <a href="" class="join-link link">
+                                    <svg class="join-icon" width="20" height="20">
+                                        <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="join-item">
+                                <a href="" class="join-link link">
+                                    <svg class="join-icon" width="20" height="20">
+                                        <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
                 </div>
-                <div class="join">
-                    <h2 class="join-title">присоединяйтесь</h2>
-                    <ul class="join-list list">
-                        <li class="join-item">
-                            <a href="" class="join-link link">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/icons/symbol-defs.svg#icon-instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-item" >
-                            <a href="" class="join-link link">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-item">
-                            <a href="" class="join-link link">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="join-item">
-                            <a href="" class="join-link link">
-                                <svg class="join-icon" width="20" height="20">
-                                    <use href="./images/icons/symbol-defs.svg#icon-linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
                 </div>
-            </div>    
                 <form class="subscribe">
                     <p class="subscribe-title">Подпишитесь на рассылку</p>
                     <div class="subscribe-cont">
@@ -414,6 +415,7 @@
                         </button>
                     </div>
                 </form>
+            </div>
             </div>  
         </footer>
 
