--- a/portfolio.html
+++ b/portfolio.html
@@ -357,8 +357,8 @@
             </section>
         </main>
         <footer class="footer">
-            <div class="footer-wrap">
-            <div class="container">
+            
+            <div class="container footer-wrap">
                 <div class="footer-flex">
                     <div>
                         <a href="" class="footer-logo link"><span class="logo-footer-start">Web</span><span class="logo-footer-end">Studio</span></a>
@@ -402,7 +402,7 @@
                                 </a>
                             </li>
                         </ul>
-                </div>
+                    </div>    
                 </div>
                 <form class="subscribe">
                     <p class="subscribe-title">Подпишитесь на рассылку</p>
@@ -415,7 +415,7 @@
                         </button>
                     </div>
                 </form>
-            </div>
+            
             </div>  
         </footer>
 
